manifests/crashes/postgis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgis
  namespace: crashes
  labels:
    app: crashes
    component: postgis
spec:
  ports:
  - name: postgres
    port: 5432
    protocol: TCP
  selector:
    app: crashes
    component: postgis

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgis
  namespace: crashes
  labels:
    app: crashes
    component: postgis
spec:
  selector:
    matchLabels:
      app: crashes # has to match .spec.template.metadata.labels
      component: postgis
  replicas: 1 # by default is 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: crashes # has to match .spec.selector.matchLabels
        component: postgis
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: postgis
        image: quay.io/codeformuenster/verkehrsunfall-postgis:master
        ports:
        - name: postgres
          containerPort: 5432
        resources:
          requests:
            memory: "2048Mi"
            cpu: "2500m"
          limits:
            cpu: "5000m"
