manifests/crashes/shiny.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: crashes
  namespace: crashes
  labels:
    app: crashes
    component: shiny
spec:
  ports:
  - port: 3838
    # protocol: TCP
  selector:
    app: crashes
    component: shiny

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: crashes
  namespace: crashes
  labels:
    app: crashes
    component: shiny
  annotations:
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: crashes.codeformuenster.org
    http:
      paths:
      - path: /
        backend:
          serviceName: crashes
          servicePort: 3838
  tls:
  - hosts:
    - crashes.codeformuenster.org
    secretName: crashes-tls

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crashes
  namespace: crashes
  labels:
    app: crashes
    component: shiny
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crashes
      component: shiny
  template:
    metadata:
      labels:
        app: crashes
        component: shiny
    spec:
      containers:
      - name: crashes
        image: quay.io/codeformuenster/accidents-shiny:v3.0.2
        ports:
        - containerPort: 3838
        # env:
        # - name: POSTGRES_HOST
        #   value: postgis
        volumeMounts:
        - name: shiny-env
          mountPath: /etc
          subPath: environment
      volumes:
      - name: shiny-env
        configMap:
          name: shiny-env
